bin_PROGRAMS=ydlemaster
ydlemaster_SOURCES=master.cpp master.h \
					half.cpp half.h \
					logging.cpp logging.h \
					restLoggerDestination.cpp restLoggerDestination.h \
					IhmCommunicationThread.cpp IhmCommunicationThread.h \
					NodeRequestHandler.cpp NodeRequestHandler.h \
					protocolRF.cpp protocolRF.h \
					RestBrowser.cpp RestBrowser.h \
					SettingsParser.cpp SettingsParser.h \
					webServer.cpp webServer.h

ydlemaster_LDADD = $(JSONCPP_LIBS) $(LIBCONFIG_LIBS)
